# SimpleLog

./: .gitignore  ReadMe.md  build.sh
doc/: ReadMe.md
src/: Appender.cpp  Appender.h  AppenderSkeleton.cpp  AppenderSkeleton.h  AppenderStore.cpp  AppenderStore.h  BasicLayout.cpp  BasicLayout.h  CMakeLists.txt  Category.cpp  Category.h  Configurator.cpp  Configurator.h  DailyRollingFileAppender.cpp  DailyRollingFileAppender.h  FileAppender.cpp  FileAppender.h  Layout.h  LayoutAppender.cpp  LayoutAppender.h  LoggingEvent.cpp  LoggingEvent.h  OSThread.cpp  OSThread.h  OstreamAppender.cpp  OstreamAppender.h  PThreads.cpp  PThreads.h  Priority.cpp  Priority.h  RollingFileAppender.cpp  RollingFileAppender.h  SimpleLog.cpp  SimpleLog.h  SimpleLogger.cpp  SimpleLogger.h  StringUtil.cpp  StringUtil.h  TMsgQueue.h  TimeStamp.cpp  (+2 more)
src/test/: example.cpp  testAsyncSimpleLog.cpp  testBasicLayout.cpp  testDailyRollingFileAppender.cpp  testFileAppender.cpp  testOstreamAppender.cpp  testRollingFileAppender.cpp  testSimpleLog.cpp  testTimeStamp.cpp
